--- a/mytinerary/src/index.css
+++ b/mytinerary/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.slick-slide >div{
-    margin: 0 10px;
+.slick-slide > div {
+  margin: 0 10px;
+}
+
+html,
+body {
+  @apply w-full h-full;
+}
+
+body {
+  @apply dark:bg-gray-800 bg-white;
 }
