--- a/mytinerary/src/index.css
+++ b/mytinerary/src/index.css
@@ -2,15 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-.slick-slide > div {
-  margin: 0 10px;
-}
-
-html,
-body {
+html,body {
   @apply w-full h-full;
 }
 
 body {
-  @apply dark:bg-gray-800 bg-white;
+  @apply bg-gray-800;
 }
