--- a/mytinerary/src/App.css
+++ b/mytinerary/src/App.css
@@ -1,42 +1,4 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.custom-gradient {
+  background: rgb(69, 103, 0);
+  background: linear-gradient(90deg, rgba(69, 103, 0, 1) 0%, rgba(0, 0, 0, 0.4962359943977591) 10%, rgba(0, 0, 0, 0.7091211484593838) 49%, rgba(0, 0, 0, 0.5018382352941176) 90%, rgba(60, 91, 0, 1) 100%);
 }
